--- a/index.html
+++ b/index.html
@@ -195,7 +195,12 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script>
+    (function() {
+        emailjs.init("rGE8Y48VVhPgOf0ga");
+    })();
+    </script>
 
 </body>
 </html>
