--- a/index.html
+++ b/index.html
@@ -109,6 +109,68 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
+                <a href="https://github.com/dtc0525/thinklet" target="_blank" class="project-link">
+                    <img src="images/Thinklet.png" alt="Thinklet" class="project-img" style="object-fit: cover;">
+                </a>
+                </div>
+                <div class="project-content">
+                    <h3>Thinklet</h3>
+                    <p>It is a lightweight website that enables users to post and comment, & can follow fellow users. </p>
+                    <div class="project-tags">
+                    <h4>Languages</h4>
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
+                        <span class="tag">JavaScript</span>
+                    </div>
+                    <div class="project-tags">
+                    <h4>Tools</h4>
+                        <span class="tag">Visual Studio</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
+                    <a href="https://github.com/Keyofcake/reservist" target="_blank" class="project-link">
+                    <img src="images/reservist.png" alt="Reservist" class="project-img" style="object-fit: cover;">                    
+                    </a>
+                </div>
+                <div class="project-content">
+                    <h3>Reservist Development</h3>
+                    <p>This web-based platform, built with PHP, is designed to guide citizen soldiers through essential training, civic responsibilities, and national defense readiness. It provides users with accessible resources and structured guidance to understand their roles within the Reserve Force</p>
+                    <div class="project-tags">
+                    <h4>Languages</h4>
+                        <span class="tag">PHP</span>
+                        <span class="tag">CSS</span>
+                        <span class="tag">JavaScript</span>
+                    </div>
+                    <div class="project-tags">
+                    <h4>Tools</h4>
+                        <span class="tag">Visual Studio</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
+                    <a href="https://github.com/carmsage/TimeTamer" target="_blank" class="project-link">
+                    <img src="images/TimeTamer.png" alt="TimeTamer" class="project-img" style="object-fit: cover;">                    
+                    </a>
+                </div>
+                <div class="project-content">
+                    <h3>TimeTamer</h3>
+                    <p>A simple website for SkillMap. Developed to make SkillMap accessible by downloading the APK file. Published on Render.com. </p>
+                    <div class="project-tags">
+                    <h4>Languages</h4>
+                        <span class="tag">Dart</span>
+                        <span class="tag">C++</span>
+                    </div>
+                    <div class="project-tags">
+                    <h4>Tools</h4>
+                        <span class="tag">Visual Studio/Android Studio (Flutter)</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
                     <a href="https://github.com/dtc0525/skillmapwebsite" target="_blank" class="project-link">
                     <img src="images/SkillMapWebsite.png" alt="SkillMapWebsite" class="project-img" style="object-fit: cover;">                    
                     </a>
@@ -130,13 +192,13 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                <a href="https://github.com/dtc0525/thinklet" target="_blank" class="project-link">
-                    <img src="images/Thinklet.png" alt="Thinklet" class="project-img" style="object-fit: cover;">
-                </a>
+                    <a href="https://github.com/dtc0525/skillmapwebsite" target="_blank" class="project-link">
+                    <img src="images/SkillMapWebsite.png" alt="SkillMapWebsite" class="project-img" style="object-fit: cover;">                    
+                    </a>
                 </div>
                 <div class="project-content">
-                    <h3>Thinklet</h3>
-                    <p>It is a lightweight website that enables users to post and comment, & can follow fellow users. </p>
+                    <h3>SkillMap Website</h3>
+                    <p>A simple website for SkillMap. Developed to make SkillMap accessible by downloading the APK file. Published on Render.com. </p>
                     <div class="project-tags">
                     <h4>Languages</h4>
                         <span class="tag">HTML</span>
