changed file name

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="project-card">
                 <div class="project-img">
                     <a href="https://github.com/carmsage/TimeTamer" target="_blank" class="project-link">
-                    <img src="images/TimeTamer.png" alt="TimeTamer" class="project-img" style="object-fit: cover;">                    
+                    <img src="images/timetamer.png" alt="TimeTamer" class="project-img" style="object-fit: cover;">                    
                     </a>
                 </div>
                 <div class="project-content">
