edited a project card

--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <a href="https://github.com/dtc0525/skillmapwebsite" target="_blank" class="project-link">
-                    <img src="images/SkillMapWebsite.png" alt="SkillMapWebsite" class="project-img" style="object-fit: cover;">                    
+                    <a href="https://github.com/dtc0525/photobooth" target="_blank" class="project-link">
+                    <img src="images/photobooth.png" alt="Photobooth" class="project-img" style="object-fit: cover;">                    
                     </a>
                 </div>
                 <div class="project-content">
-                    <h3>SkillMap Website</h3>
-                    <p>A simple website for SkillMap. Developed to make SkillMap accessible by downloading the APK file. Published on Render.com. </p>
+                    <h3>Photobooth</h3>
+                    <p>A simple vintage photobooth strip creator that allows users to upload pictures, add filters, and export the strip. Inspired from <em>The Car</em> by Artic Monkeys. </p>
                     <div class="project-tags">
                     <h4>Languages</h4>
                         <span class="tag">HTML</span>
