added few tooltips

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-img">
-                    <a href="https://github.com/Keyofcake/skill-map" target="_blank" class="project-link">
+                    <a href="https://github.com/Keyofcake/skill-map" target="_blank" class="project-link" title="Link to SkillMap repository">
                     <img src="images/SkillMap.png" alt="SkillMap" class="project-img" style="object-fit: cover;">
                     </a>
                 </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                <a href="https://github.com/dtc0525/thinklet" target="_blank" class="project-link">
+                <a href="https://github.com/dtc0525/thinklet" target="_blank" class="project-link" title="Link to Thinklet repository">
                     <img src="images/Thinklet.png" alt="Thinklet" class="project-img" style="object-fit: cover;">
                 </a>
                 </div>
@@ -130,7 +130,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <a href="https://github.com/Keyofcake/reservist" target="_blank" class="project-link">
+                    <a href="https://github.com/Keyofcake/reservist" target="_blank" class="project-link" title="Link to Reservist repository">
                     <img src="images/reservist.png" alt="Reservist" class="project-img" style="object-fit: cover;">                    
                     </a>
                 </div>
@@ -151,7 +151,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <a href="https://github.com/carmsage/TimeTamer" target="_blank" class="project-link">
+                    <a href="https://github.com/carmsage/TimeTamer" target="_blank" class="project-link" title="Link to TimeTamer repository">
                     <img src="images/timetamer.png" alt="TimeTamer" class="project-img" style="object-fit: cover;">                    
                     </a>
                 </div>
@@ -171,7 +171,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <a href="https://github.com/dtc0525/photobooth" target="_blank" class="project-link">
+                    <a href="https://github.com/dtc0525/photobooth" target="_blank" class="project-link" title="Link to Photobooth repository">
                     <img src="images/photobooth.png" alt="Photobooth" class="project-img" style="object-fit: cover;">                    
                     </a>
                 </div>
@@ -192,7 +192,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <a href="https://github.com/dtc0525/skillmapwebsite" target="_blank" class="project-link">
+                    <a href="https://github.com/dtc0525/skillmapwebsite" target="_blank" class="project-link" title="Link to SkillMap Wesbite repository">
                     <img src="images/SkillMapWebsite.png" alt="SkillMapWebsite" class="project-img" style="object-fit: cover;">                    
                     </a>
                 </div>
@@ -220,17 +220,17 @@
         <div class="contact-item">
             <i class="fab fa-github"></i>
             <strong>GitHub</strong>
-            <a href="https://github.com/dtc0525" target="_blank">dtc0525</a>
+            <a href="https://github.com/dtc0525" target="_blank" title="Link to Github account">dtc0525</a>
         </div>
         <div class="contact-item">
             <i class="fas fa-envelope"></i>
             <strong>Email</strong>
-            <a href="mailto:donnahtherisse@gmail.com">donnahtherisse@gmail.com</a>
+            <a href="mailto:donnahtherisse@gmail.com" title="Gmail account">donnahtherisse@gmail.com</a>
         </div>
         <div class="contact-item">
             <i class="fab fa-linkedin"></i>
             <strong>LinkedIn</strong>
-            <a href="https://www.linkedin.com/in/donnah-colonia-ab8a64334/" target="_blank">Donnah Colonia</a>
+            <a href="https://www.linkedin.com/in/donnah-colonia-ab8a64334/" target="_blank" title="Link to LinkedIn account">Donnah Colonia</a>
         </div>
         </div>
         <form class="contact-form" id="contactForm">
